--- a/docker-compose-example.yml
+++ b/docker-compose-example.yml
@@ -2,14 +2,29 @@ version: "3.7"
 
 services:
     app:
-        container_name: file-parser-app
-        image: mashfiqdev/laravel-php8-nginx-redis6-image:1.0
+        container_name: ecdltd-container
+        build:
+            context: .
+            dockerfile: ./docker/php/Dockerfile
+        image: ecdltd-app
         restart: unless-stopped
-        working_dir: /var/www/html
+        working_dir: /var/www/
         volumes:
-            - ./:/var/www/html
+            - ./:/var/www
+            - ./docker/php/php.ini:/usr/local/etc/php/php.ini
+        networks: 
+            - ecdltd-net
+    
+    # nginx
+    nginx:
+        container_name: ecdltd-nginx
+        image: nginx:alpine
+        restart: unless-stopped
         ports: 
             - "8891:80"
+        volumes: 
+            - ./:/var/www
+            - ./docker/nginx/:/etc/nginx/conf.d/
         networks: 
             - ecdltd-net
 
